

                 SCons - a software construction tool

                            Change Log

RELEASE 2.3.1.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE

  From Stefan Sperling:
    - Fixed the setup of linker flags for a versioned SharedLibrary
      under OpenBSD (#2916).

  From Antonio Cavallo:
    - Improve error if Visual Studio bat file not found.

  From Manuel Francisco Naranjo:
    - Allow Subst.Literal string objects to be compared with each other,
      so they work better in AddUnique() and Remove().

  From David Rothenberger:
    - Added cyglink linker that uses Cygwin naming conventions for
      shared libraries and automatically generates import libraries.

  From Dirk Baechle:
    - Update bootstrap.py so it can be used from any dir, to run
      SCons from a source (non-installed) dir.

  From Gary Oberbrunner:
    - Test harness: fail_test() can now print a message to help debugging.

  From Anatoly Techtonik:
    - require rpmbuild when building SCons package.
    - print full stack on certain errors, for debugging.

  From William Deegan:
    - VS2012 & VS2010 Resolve initialization issues by adding path to reg.exe
      in shell used to run batch files.
    - MSVC Support fixed defaulting TARGET_ARCH to HOST_ARCH. It should be
      None if not explicitly set.
    - MSVC Fixed issue where if more than one Architectures compilers are
      detected, it would take the last one found, and not the first.

  From Philipp Kraus:
    - Added optional ZIPROOT to Zip tool.

  From Dirk Baechle:
    - Replaced old SGML-based documentation toolchain with a more modern
      approach, that also requires less external dependencies (programs and
      Python packages). Added a customized Docbook XSD for strict validation of
      all input XML files.
      
  From Luca Falavigna:
    - Fixed spelling errors in MAN pages (#2897).
      
  From Michael McDougall:
    - Fixed description of ignore_case for EnumVariable in the
      MAN page (#2774).