@@ -6,6 +6,9 @@
 
 RELEASE 2.3.1.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
 
+  From Alexandre Feblot:
+    - Make sure SharedLibrary depends on all dependent libs (by depending on SHLINKCOM)
+
   From Stefan Sperling:
     - Fixed the setup of linker flags for a versioned SharedLibrary
       under OpenBSD (#2916).
